--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,24 @@
 <html>
-</html>
+<head>
+    <title>
+            Article One ! Hanika Vats
+        </title>
+    </head>
+    <body>
+        <div>
+            <h1>  Article One </h1>
+            </div>
+            <div>
+                Feb.21.2017
+                </div>
+                <div>
+                   
+                    <p>This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.
+                  </p>
+                   <p>This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.
+                  </p>
+                   <p>This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.
+                  </p>
+                    </div>
+    </body>
+    </html>
