[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,8 +3,18 @@
     <title>
             Article One ! Hanika Vats
         </title>
+        <style>
+            .mycontainer {
+                max width: 800px;
+                margin = 0 center;
+                color: grey;
+            }
+        </style>
     </head>
     <body>
+        <div class = "mycontainer">
+            
+        
         <div>
             <h1>  Article One </h1>
             </div>
@@ -19,6 +29,7 @@
                   </p>
                    <p>This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.
                   </p>
+                    </div>
                     </div>
     </body>
     </html>
