--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         <style>
             .mycontainer {
                 max width: 800px;
-                margin = 0 center;
+                margin = center;
                 color: pink;
             }
         </style>
