[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
             .mycontainer {
                 max width: 800px;
                 margin = center;
-                color: pink;
+                color: red;
             }
         </style>
     </head>
