[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,9 @@
         <style>
             .mycontainer {
                 max width: 800px;
-                margin = center;
+                margin = 0 center;
                 color: red;
+                font-family:sans serif;
             }
         </style>
     </head>
