[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,9 +5,9 @@
         </title>
         <style>
             .mycontainer {
-                max width: 800px;
+                max width: 850px;
                 margin = 0 center;
-                color: red;
+                color: blue;
                 font-family:sans serif;
             }
         </style>
