--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,8 +5,8 @@
         </title>
         <style>
             .mycontainer {
-                max width: 850px;
-                margin = 0 center;
+                max width: 800px;
+                margin = center;
                 color: blue;
                 font-family:sans serif;
             }
