[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,8 @@
         <style>
             .mycontainer {
                 max width: 800px;
-                margin = center;
-                color: blue;
+                margin = 0 auto;
+                color: green;
                 font-family:sans serif;
             }
         </style>
