--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         <style>
             .mycontainer {
                 max width: 800px;
-                margin = 0 auto;
+                margin: 0 auto;
                 color: green;
                 font-family:sans serif;
             }
