--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,10 +5,10 @@
         </title>
         <style>
             .mycontainer {
-                max width: 800px;
+                max-width: 800px;
                 margin: 0 auto;
-                color: green;
-                font-family:sans serif;
+                color: purple;
+                font-family: sans serif;
             }
         </style>
     </head>
