[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,6 +9,7 @@
                 margin: 0 auto;
                 color: purple;
                 font-family: sans serif;
+                 padding-tag: 60px;
             }
         </style>
     </head>
