--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,7 @@
                 margin: 0 auto;
                 color: purple;
                 font-family: sans serif;
-                 padding-tag: 60px;
+                 padding-top: 60px;
             }
         </style>
     </head>
