[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,16 +2,10 @@
 <head>
     <title>
             Article One ! Hanika Vats
+            
         </title>
-        <style>
-            .mycontainer {
-                max-width: 800px;
-                margin: 0 auto;
-                color: purple;
-                font-family: sans serif;
-                 padding-top: 60px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
+       
     </head>
     <body>
         <div class = "mycontainer">
