[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi all ,welcome to our special webapp.
         </div>
+        <script>
+           alert('Please , click ok to proceed.');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
