--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class = "container">
         <div class="center">
-            <img id = 'madi' src="/ui/madi.png" class="img-medium"/>
+            <img id = 'madi' src="http://www.thinkgeek.com/images/products/zoom/5d6a_no_place_like_fb.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id = 'main-text' class="center text-big bold">
-            Hi all ,welcome to our special webapp.
+        <h3>Personal</h3>
+        <div>
+           Hi, My name is Hanirashi.        
         </div>
-        <script>
-           alert('Please , click ok to proceed.');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+           I work at Microsoft.        
+        </div>
+        <hr/>
+        <div class = "footer">
+            </div>
+        
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
