--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
             <br/>
             <input type = "text" id="name" placeholder="name"></input>
             <input type ="submit" value = "Submit" id = "submit_btn"></input>
-            <ul type = "circle" id = "namelist">
+            <ul id = "namelist">
             </ul>
             </div>
         
